--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -22,4 +22,9 @@ $azul2: #7AA0DD;
 $azulRey: #002F87;
 $grisFuerte: #3D3D3D;
 $grisClaro: #9A9A9B;
-$colorFuente: #1A1E1E;
+$colorFuente: #3D3D3D;
+$gris2:#D5E5FF;
+$morado: #652D90;
+$moradoOscuro: #262261;
+$azulCielo: #1B75BB;
+$gris3: #f3f3f3;
