--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -23,3 +23,7 @@ $azulRey: #002F87;
 $grisFuerte: #3D3D3D;
 $grisClaro: #9A9A9B;
 $colorFuente: #1A1E1E;
+$azulClaro1: #D9EDEF;
+$azulClaro2: #B4DADE;
+$rosa: rgba(244, 176,162, 0.25);
+$verdeClaro: rgba(12, 143, 90, 0.100);
