--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -22,8 +22,8 @@ a{
 }
 
 img{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 i{
@@ -50,7 +50,7 @@ i{
         width: 100%;
     }
     
-    @include m.telefono{
+    @include m.tablet{
 
         &.redimensionar{
             left: 0;
