--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -36,3 +36,10 @@ $moradoOscuro: #262261;
 $azulCielo: #1B75BB;
 $gris3: #f3f3f3;
 
+$verdeFuertePag03: #035F56;
+$naranjaPag03: #E96247;
+$azulPag03: #ABD2CF;
+$verdeClaroPag03: #F4FFFD;
+$negroPag03: #122826;
+
+
