--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -24,7 +24,7 @@ a{
 
 img{
     max-width: 100%;
-    height: 100%;
+    max-height: 100%;
 }
 
 i{
@@ -62,6 +62,7 @@ i{
     #cont-paginas{
         height: 100%;
         margin-bottom: 10rem;
+        overflow: hidden;
 
         .dinamico{
             width: 100%;
