:art: Estilos pagina 04

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -34,4 +34,17 @@ $morado: #652D90;
 $moradoOscuro: #262261;
 $azulCielo: #1B75BB;
 $gris3: #f3f3f3;
+$azul3: #94D1EC;
+$azul4: #008CC9;
+$azul5: #013850;
+$azul6: #1AB3A6;
+$azul7: #005B83;
+$azul8: #0074A7;
+$azul9: #3D7F98;
+$azul10: #025D6B;
+$azul11: #0FB2CC;
+$azul12: #013850;
+$azul13: #21AAB4;
+$verde2: #184945;
+$verde3: #395B61;
 
