--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -54,4 +54,7 @@ $azulPag03: #ABD2CF;
 $verdeClaroPag03: #F4FFFD;
 $negroPag03: #122826;
 
+$rojo: #FF4230;
+$crema: #FAF3DD;
+$amarillo2: #FFF600;
 
