--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -7,7 +7,7 @@ html{
 
 body{
     font-size: 1.6rem;
-    font-family: v.$roboto;
+    font-family: v.$poppins;
     transition: all .3s cubic-bezier(0.39, 0.575, 0.565, 1);
     color: v.$colorFuente;
 }
@@ -23,9 +23,10 @@ a{
 }
 
 img{
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
+
 
 i{
     width: 2rem;
@@ -87,3 +88,39 @@ i{
     font-weight: 700;
     color: lighten(v.$colorFuente, 4);
 }
+
+.intrucciones-mano{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: v.$azulClaro2;
+    padding: 2rem 1rem;
+    text-align: center;
+    border-radius: 2rem;
+
+    @include m.tablet{
+        border-radius: 0;
+        font-size: 1.6rem;
+    }
+
+    @include m.telefono{
+        font-size: 1.4rem;
+    }
+
+    .cont-imagen{
+        width: 6rem;
+        height: 6rem;
+        padding: 1rem;
+        border: 5px solid v.$blanco;
+        border-radius: 50%;
+    }
+
+    p{
+        width: 50%;
+
+        @include m.escritorio{
+            font-size: 1.2rem;
+        }
+    }
+}
+
