--- a/src/scss/layouts/_pag04.scss
+++ b/src/scss/layouts/_pag04.scss
@@ -4,7 +4,7 @@
 #cont-pagina04{
 
     @include m.grid(4, 0);
-    height: 80vh;
+    height: 80rem;
 
     @include m.escritorio{
 
@@ -44,7 +44,7 @@
             }
 
             #globo{
-                @include m.globoNegro;
+                @include m.globoNegro(arriba);
 
                 @include m.escritorio{
                     width: 50%;
@@ -111,6 +111,7 @@
         }
 
         #circulo-central{
+            width: 42.5rem;
             height: 42.5rem;
 
             @include m.escritorio{
@@ -315,7 +316,7 @@
 
                 &#circulo7{
                     flex-direction: column;
-                    font-size: 1.1rem;
+                    font-size: 1rem;
                     padding: 2rem 4rem;
 
                     h4{
@@ -346,9 +347,6 @@
             }
 
             ul{
-
-
-
                 @include m.escritorio{
                     margin: 5rem;
                     text-align: justify;
