--- a/src/scss/navegacion/_menu.scss
+++ b/src/scss/navegacion/_menu.scss
@@ -12,7 +12,6 @@
     font-size: 1.8rem;
     z-index: 21;
     overflow: hidden;
-    overflow-y: scroll;
     border-right: 2rem solid v.$azul1;
     transition: all .3s cubic-bezier(0.39, 0.575, 0.565, 1);
     box-shadow: 14px -1px 4px -11px rgba(0,0,0,0.59);
@@ -24,12 +23,12 @@
         align-items: center;
     }
 
-    &::-webkit-scrollbar{
-        display: none;
-    }
+    // &::-webkit-scrollbar{
+    //     display: none;
+    // }
 
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    // -ms-overflow-style: none;
+    // scrollbar-width: none;
 
     &.side__move{
         width: 25rem;
@@ -80,6 +79,7 @@
     padding: 2rem 3rem;
     position: absolute;
     top: 18rem;
+    overflow-y: scroll;
 
     a{
         color: v.$gris1;
