--- a/src/scss/layouts/_pag01.scss
+++ b/src/scss/layouts/_pag01.scss
@@ -47,18 +47,20 @@
             }
         }
         .personaje1{
-            display: flex;
-            height: 130%;
-            margin-left: 5rem;
+            height: 40rem;
+            width: 25%;
             margin-top: -20rem;
+
     
             @include m.tablet{
+                height: 35rem;
                 margin-top: -15rem;
                 left: 2rem;
             }
             @include m.telefono{
-                height: 95%;
-                margin-top: -5rem;
+                height: 20rem;
+                width: 28%;
+                margin-top: -6rem;
                 margin-left: 2rem;
             }
     
@@ -150,16 +152,22 @@
             margin-left: 65rem;
 
             @include m.escritorioHD{
+                height: 28rem;
+                width: 30rem;
                 margin-left: 60rem;
             }
             @include m.tablet{
+                width: 25rem;
+                height: 25rem;
                 margin-left: 43rem;
-                top: 5rem;
+                top: 10rem;
             }
             @include m.telefono{
-                margin-left: 2rem;
+                width: 20rem;
                 height: 20rem;
-                top: 20rem;
+                margin-left: 8rem;
+                height: 20rem;
+                top: 23rem;
             }
         }
 
@@ -185,17 +193,20 @@
             height: 37rem;
             top: 6rem;
             left: 70rem;
-
+    
             @include m.escritorioHD{
-                left: 65rem;
+                width: 30rem;
+                left: 60rem;
             }
             @include m.tablet{
                 height: 70%;
-                left: 50rem;
+                width: 25rem;
+                left: 40rem;
                 top: 13rem;
             }
             @include m.telefono{
-                left: 10rem;
+                width: 20rem;
+                left: 8rem;
                 height: 25rem;
                 top: 25rem;
             }
@@ -214,4 +225,5 @@
         }
 
     }
+
 }
