--- a/src/scss/layouts/_pag03.scss
+++ b/src/scss/layouts/_pag03.scss
@@ -9,7 +9,7 @@
     background: v.$grisClaro;
     font-family: v.$poppins;
 
-    @include m.telefono{
+    @include m.tablet{
         top: 7rem;
     }
 
@@ -26,12 +26,12 @@
             @include m.resaltar(v.$colorFuente, 900);
 
             @include m.tablet{
-                left: 5rem;
+                left: 0;
             }
 
             @include m.telefono{
                 top: -6rem;
-                left: 10rem;
+                left: 1rem;
             }
         }
             
@@ -41,21 +41,28 @@
             border-radius: 2rem 2rem 0 0;
             margin-left: 2rem;
 
-            @include m.telefono{
+            @include m.tablet{
                 margin-left: 1rem;
                 margin-right: 1rem;    
             }
             
             .lavadora{
                 display: flex;
-                justify-content: center;
+                margin-left: 7rem;
                 margin-top: -4rem;
                 padding-top: 2rem;
                 height: 20rem;
+                width: 18rem;
 
                 @include m.tablet{
-                    height: 17rem;
-                }                
+                    height: 15rem;
+                    width: 15rem;
+                    margin-left: 3rem;
+                }
+                
+                @include m.telefono{
+                    margin-left: 9rem;
+                }
             }
         }
         #texto01{
@@ -64,19 +71,19 @@
             border-radius: 0 0 2rem 2rem;
             background: v.$negroPag03;
             text-align: center;
-            padding: 5rem 3rem 10rem 3rem;
+            padding: 5rem 3rem 11rem 3rem;
             @include m.resaltar(v.$blanco, 400);
             margin-left: 2rem;
             
             @include m.tablet{
-                padding: 5rem 3rem 16rem 3rem;
+                margin-left: 1rem;
+                margin-right: 1rem; 
+                padding: 7rem 3rem 14.7rem 3rem;
+                margin-bottom: 5rem;   
             }
 
             @include m.telefono{
-                margin-left: 1rem;
-                margin-right: 1rem; 
                 padding: 7rem 3rem 10rem 3rem;
-                margin-bottom: 5rem;   
             }
         }
     }
@@ -85,24 +92,21 @@
         display: flex;
         border-radius: 0 0 2rem 2rem;
         text-align: center;
-        padding: 3rem 5rem 5rem 5rem;
-        @include m.resaltar(v.$colorFuente, 400);
         margin-left: 2rem;
-        margin-bottom: 8rem;
         border-radius: 2rem;
         background: v.$azulPag03;
         margin-top: -2rem;
+        margin-bottom: 8rem;
+        @include m.resaltar(v.$colorFuente, 400);
+        padding: 3rem 5rem 5rem 5rem;
 
         @include m.tablet{
-            padding: 4rem 2rem 10rem 2rem;
+            margin-left: 0;
+            padding: 5rem 2rem 3rem 2rem;
         }
 
-        @include m.telefono{
-            padding: 15rem 3rem 5rem 3rem;
-            margin-left: 1rem;
-            margin-right: 1rem;
-        }
     }
+
     #cont03{
         #FT{
             position: relative;
@@ -113,7 +117,8 @@
             @include m.resaltar(v.$colorFuente, 900);
 
             @include m.tablet{
-                left: 2rem;
+                left: 3rem;
+                top: -6rem;
             }
 
             @include m.telefono{
@@ -130,6 +135,7 @@
             margin-right: 2rem;
 
             @include m.tablet{
+                margin-top: -5rem;
                 margin-left: 1rem;
             }
 
@@ -189,10 +195,10 @@
 
     .personaje{
         display: flex;
-        position: absolute;
-        height: 40%;
-        top: 27rem;
-        margin-left: 55rem;
+        align-content: flex-end;
+        height: 20rem;
+        width: 20rem;
+        margin-right: 5rem;
         
         @include m.escritorioHD{
             left: 50rem;
@@ -210,4 +216,5 @@
             top: 50rem;
         }
     }
+
 }
