:rocket: add pag9 y pag10

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -89,7 +89,7 @@ i{
     color: lighten(v.$colorFuente, 4);
 }
 
-.intrucciones-mano{
+.instrucciones-mano{
     display: flex;
     justify-content: space-around;
     align-items: center;
