--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,13 +15,16 @@ $poppins: 'Poppins', sans-serif;
 $blanco: #fff;
 $gris1: #E2E8ED;
 $verde: #0C8F5A;
+$verdeFuerte: #01693F;
 $naranja: #E96247;
+$naranjaClaro: #FAE1DC;
 $azul1: #4D72AA;
 $amarillo: #F9C930;
 $azul2: #7AA0DD;
 $azulRey: #002F87;
 $grisFuerte: #3D3D3D;
 $grisClaro: #9A9A9B;
+$amarilloPastel: #F9E39B;
 
 $colorFuente: #1A1E1E;
 $azulClaro1: #D9EDEF;
@@ -70,5 +73,6 @@ $verdeTelPag06: #D6DE23;
 $rojo: #FF4230;
 $rojo2: #C42626;
 $crema: #FAF3DD;
+$crema2: #FEF3D1;
 $amarillo2: #FFF600;
 
