--- a/src/scss/navegacion/_menu.scss
+++ b/src/scss/navegacion/_menu.scss
@@ -76,7 +76,7 @@
 .options__menu{
     margin-top: 2rem;
     padding: 2rem 3rem;
-    height: 50rem;
+    height: 50%;
     overflow-x: hidden;
     overflow-y: scroll;
     transition: all .3s ease;
