--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -284,27 +284,28 @@
 
 
 @mixin  imagenLibro{
-    display: flex;
+    position: relative;
     height: 10rem;
     width: 18rem;
     margin-top: -2rem;
     margin-left: 2rem;
 
     @include tablet(){
-        height: 5rem;
-        width: 10rem;
+        height: 8rem;
+        width: 15rem;
         margin-left: 1rem;
     }
 
     @include telefono(){
+        width: 100%;
         height: 8rem;
-        width: 15rem;
         margin-left: 0;
         margin-right: 0;
     }
 }
 
 @mixin cuadro($color, $colorBorde, $textAling){
+    display: none;
     background-color: $color;
     box-shadow: inset 0 2rem 0 0 $colorBorde;
     border-radius: 2rem;
@@ -313,21 +314,25 @@
     margin-top: 4rem;
     margin-bottom: 5rem;
     text-align: $textAling;
-    padding: 7rem 2rem 7rem 2rem;
-    display: flex;
+    padding: 5rem 2rem 7rem 2rem;
+    height: 50rem;
 
     @include escritorioHD(){
         margin-top: 2rem;
+        height: 55rem;
     }
 
     @include tablet(){
         margin-left: 1rem;
         margin-right: 0;
-        padding: 7rem 1rem 7rem 1rem;
+        padding: 4rem 1rem 7rem 1rem;
+        height: 70rem;
     }
 
     @include telefono(){
         margin-right: 1rem;
+        height: 35rem;
+        padding: 5rem 2rem 2rem 2rem;
     }
 
 }
